--- a/pages/nao-conformidades.html
+++ b/pages/nao-conformidades.html
@@ -43,7 +43,7 @@
 
     <div class="container mt-4">
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <h2><i class="bi bi-exclamation-triangle"></i> Gestão de Não Conformidades</h2>
+            <h2>Gestão de Não Conformidades</h2>
             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNovaNC">Nova Não Conformidade</button>
         </div>
 
