--- a/pages/indicadores.html
+++ b/pages/indicadores.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Não Conformidades</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Ações Corretivas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Ações Corretivas</a></li>
                     <li class="nav-item"><a class="nav-link active" href="indicadores.html">Indicadores</a></li>
                     <li class="nav-item"><a class="nav-link" href="oportunidades.html">Oportunidades</a></li>
                     <li class="nav-item"><a class="nav-link" href="utilizadores.html">Utilizadores</a></li>
@@ -29,6 +29,12 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-person-circle"></i> Utilizador</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="#" onclick="logout()" id="btn-logout">
+                            <i class="bi bi-box-arrow-right"></i> Sair
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -180,6 +186,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/auth.js"></script> <script src="../js/nc.js"></script>
     <script src="../js/indicadores.js"></script>
 
 </body>
