--- a/pages/nao-conformidades.html
+++ b/pages/nao-conformidades.html
@@ -18,22 +18,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="">Não Conformidades</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Ações Corretivas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Indicadores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Oportunidades</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Não Conformidades</a></li>
+                    <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Ações Corretivas</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="indicadores.html">Indicadores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="oportunidades.html">Oportunidades</a></li>
+                    <li class="nav-item"><a class="nav-link" href="utilizadores.html">Utilizadores</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-person-circle"></i> Utilizador</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="#" onclick="logout()" id="btn-logout">
+                            <i class="bi bi-box-arrow-right"></i> Sair
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -128,10 +127,6 @@
                                 <label class="form-label">Responsável *</label>
                                 <select class="form-select" id="ncResponsavel" required>
                                     <option value="">Selecione...</option>
-                                    <option value="João Silva">João Silva</option>
-                                    <option value="Maria Santos">Maria Santos</option>
-                                    <option value="Pedro Costa">Pedro Costa</option>
-                                    <option value="Ana Pereira">Ana Pereira</option>
                                 </select>
                             </div>
                         </div>
@@ -263,10 +258,6 @@
                             <label for="ac_responsavel" class="form-label">Responsável*</label>
                             <select class="form-select" id="ac_responsavel" required>
                                 <option value="">Selecione...</option>
-                                <option value="João Silva" selected>João Silva</option>
-                                <option value="Maria Santos">Maria Santos</option>
-                                <option value="Pedro Costa">Pedro Costa</option>
-                                <option value="Ana Pereira">Ana Pereira</option>
                             </select>
                         </div>
                         
@@ -313,6 +304,7 @@
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/auth.js"></script> <script src="../js/nc.js"></script>
     <script src="../js/nc.js"></script>
 </body>
 </html>
