--- a/pages/oportunidades.html
+++ b/pages/oportunidades.html
@@ -17,22 +17,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="nao-conformidades.html">Não Conformidades</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Ações Corretivas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Indicadores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="oportunidades.html">Oportunidades</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Não Conformidades</a></li>
+                    <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Ações Corretivas</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="indicadores.html">Indicadores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="oportunidades.html">Oportunidades</a></li>
+                    <li class="nav-item"><a class="nav-link" href="utilizadores.html">Utilizadores</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-person-circle"></i> Utilizador</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="#" onclick="logout()" id="btn-logout">
+                            <i class="bi bi-box-arrow-right"></i> Sair
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -223,6 +222,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/auth.js"></script> <script src="../js/nc.js"></script>
     <script src="../js/om.js"></script>
 </body>
 </html>
