--- a/pages/utilizadores.html
+++ b/pages/utilizadores.html
@@ -21,14 +21,20 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Não Conformidades</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Ações Corretivas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="indicadores.html">Indicadores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Ações Corretivas</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="indicadores.html">Indicadores</a></li>
                     <li class="nav-item"><a class="nav-link" href="oportunidades.html">Oportunidades</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="utilizadores.html">Utilizadores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="utilizadores.html">Utilizadores</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-person-circle"></i> Utilizador</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="#" onclick="logout()" id="btn-logout">
+                            <i class="bi bi-box-arrow-right"></i> Sair
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +44,7 @@
     <div class="container mt-4">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2>Gestão de Utilizadores</h2>
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNovoUtilizador">
+            <button class="btn btn-primary" id="btnNovoUtilizador" data-bs-toggle="modal" data-bs-target="#modalNovoUtilizador">
                 Novo Utilizador
             </button>
         </div>
@@ -80,11 +86,10 @@
                                 <th>Email</th>
                                 <th>Departamento</th>
                                 <th>Tipo</th>
-                            </tr>
+                                <th>Ações</th> </tr>
                         </thead>
                         <tbody id="tabelaUtilizadores">
-                            <!-- Preenchido via JS -->
-                        </tbody>
+                            </tbody>
                     </table>
                 </div>
             </div>
@@ -128,16 +133,16 @@
                         </div>
 
                         <div class="mb-3">
-                            <label class="form-label">Tipo de Utilizador *</label>
+                            <label class="form-label">Tipo de Utilizador (Define as Permissões) *</label>
                             <select class="form-select" id="userTipo" required>
                                 <option value="">Selecione...</option>
-                                <option value="Gestão da Qualidade">Gestão da Qualidade</option>
-                                <option value="Administração">Administração</option>
+                                <option value="AdminWeb">AdminWeb (Acesso Total)</option>
+                                <option value="Gestão da Qualidade">Gestão da Qualidade (Acesso Total)</option>
+                                <option value="Responsável de Área">Responsável de Área (Acesso Restrito ao Dept.)</option>
                                 <option value="Auditor Interno">Auditor Interno</option>
-                                <option value="Auditor Externo">Auditor Externo</option>
-                                <option value="Desenvolvimento">Desenvolvimento</option>
-                                <option value="Outro">Outro</option>
+                                <option value="Utilizador Básico">Utilizador Básico</option>
                             </select>
+                            <small class="text-muted">Nota: Se escolher "Responsável de Área", ele só verá dados do Departamento selecionado acima.</small>
                         </div>
 
                     </form>
@@ -153,6 +158,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="../js/auth.js"></script>
     <script src="../js/utilizadores.js"></script>
 
 </body>
