--- a/pages/oportunidades.html
+++ b/pages/oportunidades.html
@@ -119,7 +119,7 @@
                                 </select>
                             </div>
                             <div class="col-md-6 mb-3">
-                                <label class="form-label">Prioridade *</label>
+                                <label class="form-label">Prioridade</label>
                                 <select class="form-select" id="omPrioridade" required>
                                     <option value="Baixa">Baixa</option>
                                     <option value="Média" selected>Média</option>
