--- a/pages/utilizadores.html
+++ b/pages/utilizadores.html
@@ -22,9 +22,9 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Não Conformidades</a></li>
                     <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Ações Corretivas</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="indicadores.html">Indicadores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="indicadores.html">Indicadores</a></li>
                     <li class="nav-item"><a class="nav-link" href="oportunidades.html">Oportunidades</a></li>
-                    <li class="nav-item"><a class="nav-link" href="utilizadores.html">Utilizadores</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="utilizadores.html">Utilizadores</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
