--- a/pages/nao-conformidades.html
+++ b/pages/nao-conformidades.html
@@ -20,8 +20,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="nao-conformidades.html">Não Conformidades</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="nao-conformidades.html">Ações Corretivas</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="nao-conformidades.html">Não Conformidades</a></li>
                     <li class="nav-item"><a class="nav-link" href="indicadores.html">Indicadores</a></li>
                     <li class="nav-item"><a class="nav-link" href="oportunidades.html">Oportunidades</a></li>
                     <li class="nav-item"><a class="nav-link" href="utilizadores.html">Utilizadores</a></li>
