--- a/pages/indicadores.html
+++ b/pages/indicadores.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAMQ-9001 - Indicadores</title>
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="../css/global.css" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- NAVBAR -->
@@ -130,13 +132,19 @@
 
                         <div class="mb-3">
                             <label class="form-label">Meta / Objetivo *</label>
-                            <input type="text" class="form-control" id="indMeta" placeholder="Ex: Máximo de 3 reclamações por mês" required>
+                            <input type="text" class="form-control" id="indMeta"
+                                placeholder="Ex: Máximo de 3 reclamações por mês" required>
                         </div>
 
                         <div class="mb-3">
                             <label class="form-label">Valor Atual *</label>
                             <input type="number" class="form-control" id="indValor" required>
                         </div>
+                        <label class="form-label">Sentido do Indicador</label>
+                        <select id="indSentido" class="form-select" required>
+                            <option value="menor_melhor">Quanto menor, melhor</option>
+                            <option value="maior_melhor">Quanto maior, melhor</option>
+                        </select>
                     </form>
                 </div>
 
@@ -172,6 +180,13 @@
                     <p id="detalheValor"></p>
 
                     <hr>
+                    <h6>Estado Atual do Indicador</h6>
+
+                    <canvas id="graficoEstado" height="200"></canvas>
+
+                    <p id="textoEstado" class="text-center fw-bold mt-2"></p>
+
+                    <hr>
                     <h6>Atualizar Valor Atual</h6>
                     <input type="number" id="novoValorAtual" class="form-control" placeholder="Novo valor...">
                 </div>
@@ -185,8 +200,11 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/auth.js"></script> <script src="../js/nc.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/nc.js"></script>
     <script src="../js/indicadores.js"></script>
 
 </body>
+
 </html>
