--- a/pages/login.html
+++ b/pages/login.html
@@ -42,6 +42,7 @@
                     <li><small><strong>Comercial:</strong> comercial@empresa.pt</small></li>
                     <li><small><strong>TI (Básico):</strong> it@empresa.pt</small></li>
                     <li><small><strong>TI (Resp.):</strong> joaosilva@empresa.pt</small></li>
+                    <li><small><strong>Auditoria (Aud Interno):</strong> auditoria@empresa.pt</small></li>
                 </ul>
             </div>
 
