--- a/pages/utilizadores.html
+++ b/pages/utilizadores.html
@@ -123,6 +123,7 @@
                                 <option value="">Selecione...</option>
                                 <option value="Produção">Produção</option>
                                 <option value="Qualidade">Qualidade</option>
+                                <option value="Auditoria">Auditoria</option>
                                 <option value="Logística">Logística</option>
                                 <option value="Comercial">Comercial</option>
                                 <option value="RH">Recursos Humanos</option>
