--- a/pages/nao-conformidades.html
+++ b/pages/nao-conformidades.html
@@ -283,10 +283,8 @@
 
                             <div class="col-md-6 mb-3">
                                 <label for="ac_eficacia" class="form-label">Eficácia Auditada*</label>
-                                <select class="form-select" id="ac_eficacia" required>
+                                <select class="form-select" id="ac_eficacia" disabled>
                                     <option value="pendente" selected>Pendente</option>
-                                    <option value="eficaz">Eficaz</option>
-                                    <option value="ineficaz">Ineficaz</option>
                                 </select>
                             </div>
                         </div>
