Versão Final protótipo

--- a/pages/login.html
+++ b/pages/login.html
@@ -40,9 +40,11 @@
                     <li><small><strong>Produção:</strong> producao@empresa.pt</small></li>
                     <li><small><strong>Logística:</strong> logistica@empresa.pt</small></li>
                     <li><small><strong>Comercial:</strong> comercial@empresa.pt</small></li>
-                    <li><small><strong>TI (Básico):</strong> it@empresa.pt</small></li>
-                    <li><small><strong>TI (Resp.):</strong> joaosilva@empresa.pt</small></li>
+                    <li><small><strong>TI:</strong> it@empresa.pt</small></li>
                     <li><small><strong>Auditoria (Aud Interno):</strong> auditoria@empresa.pt</small></li>
+                    <li><small><strong>Produção (Básico):</strong> producaobasic@empresa.pt</small></li>
+                    <li><small><strong>Logística (Básico):</strong> logisticabasic@empresa.pt</small></li>
+                    <li><small><strong>TI (Básico):</strong> itbasic@empresa.pt</small></li>
                 </ul>
             </div>
 
