--- a/pages/nao-conformidades.html
+++ b/pages/nao-conformidades.html
@@ -268,7 +268,7 @@
 
                             <div class="col-md-6 mb-3">
                                 <label for="ac_prazo" class="form-label">Prazo Final*</label>
-                                <input type="date" class="form-control" id="ac_prazo" value="2026-03-02" required>
+                                <input type="date" class="form-control" id="ac_prazo" required>
                             </div>
                         </div>
 
